[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }
rip_worldgenerator = { version = "0.5.54", registry = "kellnr" }
op_map = { version = "1.0.5", registry = "kellnr" }
asfalt_inator = { version = "0.5.0", registry = "kellnr" }
searchtool_unwrap = { version = "0.1.1", registry = "kellnr" }
crab_rave_explorer = { version = "0.1.3", registry = "kellnr" }
oxagaudiotool = { version = "0.2.0", registry = "kellnr" }
cargo_commandos_lucky = { version = "1.0.1", registry = "kellnr" }
sense_and_find_by_rustafariani = { version = "0.1.3", registry = "kellnr" }
olympus = { version = "2.0.0", git = "https://github.com/Kalsifer-742/olympus.git", tag = "v2.0.0" }
[dev-dependencies]
ragnarok = { version = "0.4.12", git = "https://github.com/circled-square/ragnarok.git", tag = "0.4.12" }
