[package]
name = "bmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bmo"
path = "src/lib.rs"

[dependencies]
# Commons Crate
robotics_lib = { version = "0.1.17", registry = "kellnr" }
# Visualizer
olympus = { version = "2.0.0", git = "https://github.com/Kalsifer-742/olympus.git", tag = "v2.0.0" }
# Tools
op_map = { version = "1.0.5", registry = "kellnr" }
sense_and_find_by_rustafariani = { version = "0.1.5", registry = "kellnr"}
asfalt_inator = { version = "0.5.0", registry = "kellnr" }
searchtool_unwrap = { version = "0.1.1", registry = "kellnr" }
crab_rave_explorer = { version = "0.2.1", registry = "kellnr" }
oxagaudiotool = { version = "0.2.0", registry = "kellnr" }
cargo_commandos_lucky = { version = "1.0.1", registry = "kellnr" }
# Other
macroquad = "0.4.4"