[package]
name = "olympus"
version = "2.0.0"
edition = "2021"
authors = ["Enrico Dalla Croce (Kalsifer-742)"]
description = "GUI for the robotics_lib"
readme = "README.md"
repository = "https://github.com/Kalsifer-742/olympus.git"
publish = ["kellnr"]

[dependencies]
robotics_lib = { version = "0.1.20", registry = "kellnr" }
macroquad = "0.4.4"
sys-info = "0.9.1"

[dev-dependencies]
bmo = { git = "https://github.com/silvanusbordignon/bmo.git" }
ai = { git = "https://github.com/arvt/ai.git" }
rip_worldgenerator = { version = "0.5.57", registry = "kellnr" }
midgard = { version = "0.2.1", registry = "kellnr" }